* pack.c (pack_unpack, AVOID_CC_BUG): Very ugly workaround for   optimization bug of Oracle Solaris Studio 12.4 on Solaris   with -xO4 optimization option. [Bug #11684]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@52559 b2dd03c8-39d4-4d8f-98ff-823fe69b080e